Improve Hotstar-like UI with movie cards

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,10 +5,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🔥 Mini Hotstar</h1>
-  <div class="movie">
-    <p>Movie: Avengers</p>
-    <p>Category: Action</p>
-  </div>
+
+<h1>🔥 Mini Hotstar</h1>
+
+<h2>Trending</h2>
+<div class="container">
+  <div class="card">Avengers</div>
+  <div class="card">Bahubali</div>
+  <div class="card">KGF</div>
+</div>
+
+<h2>Drama</h2>
+<div class="container">
+  <div class="card">Titanic</div>
+  <div class="card">Dangal</div>
+</div>
+
 </body>
 </html>
